Added an element that displays all level 25,50,75,100,200 with nature boosts

--- a/App_Intro/Details.xaml
+++ b/App_Intro/Details.xaml
@@ -6,151 +6,177 @@
         xmlns:appIntro="clr-namespace:App_Intro"
         mc:Ignorable="d"
         Title="Details" Height="700" Width="800">
-    <StackPanel Margin="10">
-        <TextBlock Style="{StaticResource Title}">
-            <TextBlock.Text>
-                <MultiBinding StringFormat="{}Details of {0}">
-                    <Binding Path="Name.English"></Binding>
-                </MultiBinding>
-            </TextBlock.Text>
-        </TextBlock>
-
-        <Image Source="{Binding Path=Sprite}" Width="50" HorizontalAlignment="Left" />
-
+    <ScrollViewer>
         <StackPanel Margin="10">
-            <appIntro:StatsDisplayer Stats="{Binding BaseStats}" />
+            <TextBlock Style="{StaticResource Title}">
+                <TextBlock.Text>
+                    <MultiBinding StringFormat="{}Details of {0}">
+                        <Binding Path="Name.English"></Binding>
+                    </MultiBinding>
+                </TextBlock.Text>
+            </TextBlock>
 
-            <WrapPanel Margin="0,10" MinWidth="150">
-                <TextBlock Text="Type(s) : " Margin="0,0,10,0" />
-                <ListBox ItemsSource="{Binding Types}" MaxWidth="300" HorizontalAlignment="Left" BorderThickness="0"
-                         Margin="0,-3">
-                    <ListBox.ItemTemplate>
-                        <DataTemplate>
-                            <TextBlock Text="{Binding}" />
-                        </DataTemplate>
-                    </ListBox.ItemTemplate>
-                    <ListBox.ItemsPanel>
-                        <ItemsPanelTemplate>
-                            <WrapPanel IsItemsHost="True" MaxWidth="75"></WrapPanel>
-                        </ItemsPanelTemplate>
-                    </ListBox.ItemsPanel>
-                </ListBox>
-            </WrapPanel>
+            <Image Source="{Binding Path=Sprite}" Width="50" HorizontalAlignment="Left" />
 
-            <TextBlock Text="Get stats for : " Margin="0,10"></TextBlock>
-            <WrapPanel>
-                <WrapPanel Margin="10,10">
-                    <Label Content="Level"></Label>
-                    <TextBox Width="50" Text="{Binding Path=BaseStats.Level, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" TextAlignment="Center" VerticalAlignment="Center"></TextBox>
+            <StackPanel Margin="10">
+                <appIntro:StatsDisplayer Stats="{Binding BaseStats}" />
+
+                <WrapPanel Margin="0,10" MinWidth="150">
+                    <TextBlock Text="Type(s) : " Margin="0,0,10,0" />
+                    <ListBox ItemsSource="{Binding Types}" MaxWidth="300" HorizontalAlignment="Left"
+                             BorderThickness="0"
+                             Margin="0,-3">
+                        <ListBox.ItemTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding}" />
+                            </DataTemplate>
+                        </ListBox.ItemTemplate>
+                        <ListBox.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <WrapPanel IsItemsHost="True" MaxWidth="75"></WrapPanel>
+                            </ItemsPanelTemplate>
+                        </ListBox.ItemsPanel>
+                    </ListBox>
                 </WrapPanel>
-                <Border BorderThickness="1" BorderBrush="Black" CornerRadius="5" Padding="5"
-                        d:DataContext="{d:DesignInstance appIntro:Pokemon}">
-                <Border.Resources>
-                    <Style TargetType="ContentControl" x:Key="Dark">
-                        <Setter Property="Background" Value="Gray"/>
-                    </Style>
-                    
-                    <Style TargetType="ContentControl" x:Key="Light">
-                        <Setter Property="Background" Value="LightGray"/>
-                    </Style>
-                    
-                    <Style TargetType="TextBox" x:Key="BaseDarkBox">
-                        <Setter Property="Background" Value="Green"/>
-                    </Style>
-                    
-                    <Style TargetType="TextBox" x:Key="BaseLightBox">
-                        <Setter Property="Background" Value="LightGreen"/>
-                    </Style>
-                    
-                    <Style TargetType="TextBox" x:Key="EVTextDark" BasedOn="{StaticResource BaseDarkBox}">
-                        <Setter Property="Text" Value="31"/>
-                        <Setter Property="Width" Value="80"/>
-                        <Setter Property="Height" Value="80"/>
-                        <Setter Property="TextAlignment" Value="Center"/>
-                        <Setter Property="BorderThickness" Value="0"/>
-                        <Setter Property="VerticalContentAlignment" Value="Center"/>
-                    </Style>
-                    <Style TargetType="TextBox" x:Key="EVTextLight" BasedOn="{StaticResource BaseLightBox}">
-                        <Setter Property="Text" Value="31"/>
-                        <Setter Property="Width" Value="80"/>
-                        <Setter Property="Height" Value="80"/>
-                        <Setter Property="TextAlignment" Value="Center"/>
-                        <Setter Property="BorderThickness" Value="0"/>
-                        <Setter Property="VerticalContentAlignment" Value="Center"/>
-                    </Style>
-                    <Style TargetType="TextBox" x:Key="IVTextDark" BasedOn="{StaticResource BaseDarkBox}">
-                        <Setter Property="VerticalAlignment" Value="Center"/>
-                        <Setter Property="Text" Value="0"/>
-                        <Setter Property="Width" Value="80"/>
-                        <Setter Property="Height" Value="80"/>
-                        <Setter Property="TextAlignment" Value="Center"/>
-                        <Setter Property="BorderThickness" Value="0"/>
-                        <Setter Property="VerticalContentAlignment" Value="Center"/>
-                    </Style>
-                    <Style TargetType="TextBox" x:Key="IVTextLight" BasedOn="{StaticResource BaseLightBox}">
-                        <Setter Property="VerticalAlignment" Value="Center"/>
-                        <Setter Property="Text" Value="0"/>
-                        <Setter Property="Width" Value="80"/>
-                        <Setter Property="Height" Value="80"/>
-                        <Setter Property="TextAlignment" Value="Center"/>
-                        <Setter Property="BorderThickness" Value="0"/>
-                        <Setter Property="VerticalContentAlignment" Value="Center"/>
-                    </Style>
-                </Border.Resources>
-                    <WrapPanel>
-                        <StackPanel>
-                            <Label Content="" HorizontalContentAlignment="Center" Style="{StaticResource Dark}"/>
-                            <Label Content="EV" Height="80" VerticalContentAlignment="Center"  Style="{StaticResource Light}"/>
-                            <Label Content="IV" Height="80" VerticalContentAlignment="Center"  Style="{StaticResource Dark}"/>
-                        </StackPanel>
-                        
-                        <StackPanel>
-                            <Label Content="HP" HorizontalContentAlignment="Center" Style="{StaticResource Light}"/>
-                            <TextBox Style="{StaticResource EVTextDark}" Text="{Binding BaseStats.EVs[0], Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-                            <TextBox Style="{StaticResource IVTextLight}" Text="{Binding BaseStats.IVs[0], Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-                        </StackPanel>
-                        
 
-                        <StackPanel>
-                            <Label Content="Attack" HorizontalContentAlignment="Center" Style="{StaticResource Dark}"/>
-                            
-                            <TextBox Style="{StaticResource EVTextLight}" Text="{Binding BaseStats.EVs[1], Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-                            <TextBox Style="{StaticResource IVTextDark}" Text="{Binding BaseStats.IVs[1], Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-                        </StackPanel>
-                        
-                        <StackPanel>
-                            <Label Content="Defense" HorizontalContentAlignment="Center" Style="{StaticResource Light}" />
-                            
-                            <TextBox Style="{StaticResource EVTextDark}" Text="{Binding BaseStats.EVs[2], Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-                            <TextBox Style="{StaticResource IVTextLight}" Text="{Binding BaseStats.IVs[2], Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-                        </StackPanel>
-                       
-
-                        <StackPanel>
-                            <Label Content="SpAttack" HorizontalContentAlignment="Center" Style="{StaticResource Dark}"/>
-                            <TextBox Style="{StaticResource EVTextLight}" Text="{Binding BaseStats.EVs[3], Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-                            <TextBox Style="{StaticResource IVTextDark}" Text="{Binding BaseStats.IVs[3], Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-                        </StackPanel>
-
-                        <StackPanel>
-                            <Label Content="SpDefense" HorizontalContentAlignment="Center" Style="{StaticResource Light}" />
-                            
-                            <TextBox Style="{StaticResource EVTextDark}" Text="{Binding BaseStats.EVs[4], Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-                            <TextBox Style="{StaticResource IVTextLight}" Text="{Binding BaseStats.IVs[4], Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-                        </StackPanel>
-                        
-                        <StackPanel>
-                            <Label Content="Speed" HorizontalContentAlignment="Center" Style="{StaticResource Dark}"/>
-                            <TextBox Style="{StaticResource EVTextLight}" Text="{Binding BaseStats.EVs[5], Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-                            <TextBox Style="{StaticResource IVTextDark}" Text="{Binding BaseStats.IVs[5], Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-                        </StackPanel>
-                        
+                <TextBlock Text="Get stats for : " Margin="0,10"></TextBlock>
+                <WrapPanel>
+                    <WrapPanel Margin="10,10">
+                        <Label Content="Level"></Label>
+                        <TextBox Width="50"
+                                 Text="{Binding Path=BaseStats.Level, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                 TextAlignment="Center" VerticalAlignment="Center">
+                        </TextBox>
                     </WrapPanel>
-            </Border>
-            </WrapPanel>
-            <appIntro:StatsDisplayer x:Name="NewStats"/>
+                    <Border BorderThickness="1" BorderBrush="Black" CornerRadius="5" Padding="5"
+                            d:DataContext="{d:DesignInstance appIntro:Pokemon}">
+                        <Border.Resources>
+                            <Style TargetType="ContentControl" x:Key="Dark">
+                                <Setter Property="Background" Value="Gray" />
+                            </Style>
+
+                            <Style TargetType="ContentControl" x:Key="Light">
+                                <Setter Property="Background" Value="LightGray" />
+                            </Style>
+
+                            <Style TargetType="TextBox" x:Key="BaseDarkBox">
+                                <Setter Property="Background" Value="Green" />
+                            </Style>
+
+                            <Style TargetType="TextBox" x:Key="BaseLightBox">
+                                <Setter Property="Background" Value="LightGreen" />
+                            </Style>
+
+                            <Style TargetType="TextBox" x:Key="EVTextDark" BasedOn="{StaticResource BaseDarkBox}">
+                                <Setter Property="Text" Value="31" />
+                                <Setter Property="Width" Value="80" />
+                                <Setter Property="Height" Value="80" />
+                                <Setter Property="TextAlignment" Value="Center" />
+                                <Setter Property="BorderThickness" Value="0" />
+                                <Setter Property="VerticalContentAlignment" Value="Center" />
+                            </Style>
+                            <Style TargetType="TextBox" x:Key="EVTextLight" BasedOn="{StaticResource BaseLightBox}">
+                                <Setter Property="Text" Value="31" />
+                                <Setter Property="Width" Value="80" />
+                                <Setter Property="Height" Value="80" />
+                                <Setter Property="TextAlignment" Value="Center" />
+                                <Setter Property="BorderThickness" Value="0" />
+                                <Setter Property="VerticalContentAlignment" Value="Center" />
+                            </Style>
+                            <Style TargetType="TextBox" x:Key="IVTextDark" BasedOn="{StaticResource BaseDarkBox}">
+                                <Setter Property="VerticalAlignment" Value="Center" />
+                                <Setter Property="Text" Value="0" />
+                                <Setter Property="Width" Value="80" />
+                                <Setter Property="Height" Value="80" />
+                                <Setter Property="TextAlignment" Value="Center" />
+                                <Setter Property="BorderThickness" Value="0" />
+                                <Setter Property="VerticalContentAlignment" Value="Center" />
+                            </Style>
+                            <Style TargetType="TextBox" x:Key="IVTextLight" BasedOn="{StaticResource BaseLightBox}">
+                                <Setter Property="VerticalAlignment" Value="Center" />
+                                <Setter Property="Text" Value="0" />
+                                <Setter Property="Width" Value="80" />
+                                <Setter Property="Height" Value="80" />
+                                <Setter Property="TextAlignment" Value="Center" />
+                                <Setter Property="BorderThickness" Value="0" />
+                                <Setter Property="VerticalContentAlignment" Value="Center" />
+                            </Style>
+                        </Border.Resources>
+                        <WrapPanel>
+                            <StackPanel>
+                                <Label Content="" HorizontalContentAlignment="Center" Style="{StaticResource Dark}" />
+                                <Label Content="EV" Height="80" VerticalContentAlignment="Center"
+                                       Style="{StaticResource Light}" />
+                                <Label Content="IV" Height="80" VerticalContentAlignment="Center"
+                                       Style="{StaticResource Dark}" />
+                            </StackPanel>
+
+                            <StackPanel>
+                                <Label Content="HP" HorizontalContentAlignment="Center" Style="{StaticResource Light}" />
+                                <TextBox Style="{StaticResource EVTextDark}"
+                                         Text="{Binding BaseStats.EVs[0], Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                                <TextBox Style="{StaticResource IVTextLight}"
+                                         Text="{Binding BaseStats.IVs[0], Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            </StackPanel>
+
+
+                            <StackPanel>
+                                <Label Content="Attack" HorizontalContentAlignment="Center"
+                                       Style="{StaticResource Dark}" />
+
+                                <TextBox Style="{StaticResource EVTextLight}"
+                                         Text="{Binding BaseStats.EVs[1], Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                                <TextBox Style="{StaticResource IVTextDark}"
+                                         Text="{Binding BaseStats.IVs[1], Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            </StackPanel>
+
+                            <StackPanel>
+                                <Label Content="Defense" HorizontalContentAlignment="Center"
+                                       Style="{StaticResource Light}" />
+
+                                <TextBox Style="{StaticResource EVTextDark}"
+                                         Text="{Binding BaseStats.EVs[2], Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                                <TextBox Style="{StaticResource IVTextLight}"
+                                         Text="{Binding BaseStats.IVs[2], Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            </StackPanel>
+
+
+                            <StackPanel>
+                                <Label Content="SpAttack" HorizontalContentAlignment="Center"
+                                       Style="{StaticResource Dark}" />
+                                <TextBox Style="{StaticResource EVTextLight}"
+                                         Text="{Binding BaseStats.EVs[3], Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                                <TextBox Style="{StaticResource IVTextDark}"
+                                         Text="{Binding BaseStats.IVs[3], Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            </StackPanel>
+
+                            <StackPanel>
+                                <Label Content="SpDefense" HorizontalContentAlignment="Center"
+                                       Style="{StaticResource Light}" />
+
+                                <TextBox Style="{StaticResource EVTextDark}"
+                                         Text="{Binding BaseStats.EVs[4], Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                                <TextBox Style="{StaticResource IVTextLight}"
+                                         Text="{Binding BaseStats.IVs[4], Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            </StackPanel>
+
+                            <StackPanel>
+                                <Label Content="Speed" HorizontalContentAlignment="Center"
+                                       Style="{StaticResource Dark}" />
+                                <TextBox Style="{StaticResource EVTextLight}"
+                                         Text="{Binding BaseStats.EVs[5], Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                                <TextBox Style="{StaticResource IVTextDark}"
+                                         Text="{Binding BaseStats.IVs[5], Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            </StackPanel>
+
+                        </WrapPanel>
+                    </Border>
+                </WrapPanel>
+                <appIntro:StatsDisplayer x:Name="NewStats" />
+                <appIntro:FullStatsDisplayer Stats="{Binding BaseStats}" Margin="0,10"/>
+
+            </StackPanel>
 
         </StackPanel>
-
-    </StackPanel>
+    </ScrollViewer>
 </Window>
