--- a/App_Intro/StatsDisplayer.xaml
+++ b/App_Intro/StatsDisplayer.xaml
@@ -1,8 +1,9 @@
-﻿<UserControl x:Class="App_Intro.StatsDisplayer"
+﻿<appIntro:BaseStatsDisplayer x:Class="App_Intro.StatsDisplayer"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:appIntro="clr-namespace:App_Intro"
              mc:Ignorable="d">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -25,12 +26,12 @@
         <TextBlock Grid.Row="4" Text="Special Defense : " Style="{StaticResource ListItemHeader}" />
         <TextBlock Grid.Row="5" Text="Speed : " Style="{StaticResource ListItemHeader}" />
 
-        <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding Stats.HP, RelativeSource={RelativeSource AncestorType=UserControl}}" />
-        <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding Stats.Attack, RelativeSource={RelativeSource AncestorType=UserControl}}" />
-        <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding Stats.Defense, RelativeSource={RelativeSource AncestorType=UserControl}}" />
-        <TextBlock Grid.Row="3" Grid.Column="1" Text="{Binding Stats.SpAttack, RelativeSource={RelativeSource AncestorType=UserControl}}" />
-        <TextBlock Grid.Row="4" Grid.Column="1" Text="{Binding Stats.SpDefense, RelativeSource={RelativeSource AncestorType=UserControl}}" />
-        <TextBlock Grid.Row="5" Grid.Column="1" Text="{Binding Stats.Speed, RelativeSource={RelativeSource AncestorType=UserControl}}" />
+        <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding Stats.HP, RelativeSource={RelativeSource AncestorType=appIntro:BaseStatsDisplayer}}" />
+        <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding Stats.Attack, RelativeSource={RelativeSource AncestorType=appIntro:BaseStatsDisplayer}}" />
+        <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding Stats.Defense, RelativeSource={RelativeSource AncestorType=appIntro:BaseStatsDisplayer}}" />
+        <TextBlock Grid.Row="3" Grid.Column="1" Text="{Binding Stats.SpAttack, RelativeSource={RelativeSource AncestorType=appIntro:BaseStatsDisplayer}}" />
+        <TextBlock Grid.Row="4" Grid.Column="1" Text="{Binding Stats.SpDefense, RelativeSource={RelativeSource AncestorType=appIntro:BaseStatsDisplayer}}" />
+        <TextBlock Grid.Row="5" Grid.Column="1" Text="{Binding Stats.Speed, RelativeSource={RelativeSource AncestorType=appIntro:BaseStatsDisplayer}}" />
     </Grid>
 
-</UserControl>
+</appIntro:BaseStatsDisplayer>
