--- a/App_Intro/FullStatsDisplayer.xaml
+++ b/App_Intro/FullStatsDisplayer.xaml
@@ -5,14 +5,24 @@
                           xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                           xmlns:local="clr-namespace:App_Intro"
                           xmlns:system="clr-namespace:System;assembly=System.Runtime"
-                          mc:Ignorable="d" d:DesignWidth="300">
+                          mc:Ignorable="d">
     <Grid >
         <Grid.Resources>
             <local:BaseStatToLevelStatsConverter x:Key="BaseStatToLevelStatsConverter" />
         </Grid.Resources>
 
-        <WrapPanel MinWidth="2000">
-            <Border BorderBrush="LightGray" BorderThickness="0.5">
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="0.1*"/>
+                <RowDefinition/>
+                <RowDefinition Height="0.1*"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="90"/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <TextBlock TextAlignment="Center" Grid.ColumnSpan="14" Text="Full stats display *" FontSize="{StaticResource H2}" Margin="0,0,0,10"></TextBlock>
+            <Border Grid.Row="1" Grid.Column="0" BorderBrush="LightGray" BorderThickness="0.5">
                 <StackPanel>
                     <Border BorderBrush="LightGray" BorderThickness="0.5">
                         <Label Content="" />
@@ -25,8 +35,25 @@
                     <Label Content="Speed" />
                 </StackPanel>
             </Border>
-            <WrapPanel>
-                <local:DataRow Title="Level 25-">
+            <Grid Grid.Row="1" Grid.Column="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <local:DataRow Title="Level 25-" Grid.Column="0">
                     <local:DataRow.Resources>
                         <system:Int32 x:Key="Level">25</system:Int32>
                         <system:Single x:Key="NatureBoost">0.9</system:Single>
@@ -40,7 +67,7 @@
                         </MultiBinding>
                     </local:DataRow.Stat>
                 </local:DataRow>
-                <local:DataRow Title="Level 25">
+                <local:DataRow Title="Level 25" Grid.Column="1">
                     <local:DataRow.Resources>
                         <system:Int32 x:Key="Level">25</system:Int32>
                         <system:Single x:Key="NatureBoost">1</system:Single>
@@ -54,7 +81,7 @@
                         </MultiBinding>
                     </local:DataRow.Stat>
                 </local:DataRow>
-                <local:DataRow Title="Level 25+">
+                <local:DataRow Title="Level 25+" Grid.Column="2">
                     <local:DataRow.Resources>
                         <system:Int32 x:Key="Level">25</system:Int32>
                         <system:Single x:Key="NatureBoost">1.1</system:Single>
@@ -69,7 +96,7 @@
                     </local:DataRow.Stat>
                 </local:DataRow>
 
-                <local:DataRow Title="Level 50-">
+                <local:DataRow Title="Level 50-" Grid.Column="3">
                     <local:DataRow.Resources>
                         <system:Int32 x:Key="Level">50</system:Int32>
                         <system:Single x:Key="NatureBoost">0.9</system:Single>
@@ -83,7 +110,7 @@
                         </MultiBinding>
                     </local:DataRow.Stat>
                 </local:DataRow>
-                <local:DataRow Title="Level 50">
+                <local:DataRow Title="Level 50" Grid.Column="4">
                     <local:DataRow.Resources>
                         <system:Int32 x:Key="Level">50</system:Int32>
                         <system:Single x:Key="NatureBoost">1</system:Single>
@@ -97,7 +124,7 @@
                         </MultiBinding>
                     </local:DataRow.Stat>
                 </local:DataRow>
-                <local:DataRow Title="Level 50+">
+                <local:DataRow Title="Level 50+" Grid.Column="5">
                     <local:DataRow.Resources>
                         <system:Int32 x:Key="Level">50</system:Int32>
                         <system:Single x:Key="NatureBoost">1.1</system:Single>
@@ -112,7 +139,7 @@
                     </local:DataRow.Stat>
                 </local:DataRow>
 
-                <local:DataRow Title="Level 75-">
+                <local:DataRow Title="Level 75-" Grid.Column="6">
                     <local:DataRow.Resources>
                         <system:Int32 x:Key="Level">75</system:Int32>
                         <system:Single x:Key="NatureBoost">0.9</system:Single>
@@ -126,7 +153,7 @@
                         </MultiBinding>
                     </local:DataRow.Stat>
                 </local:DataRow>
-                <local:DataRow Title="Level 75">
+                <local:DataRow Title="Level 75" Grid.Column="7">
                     <local:DataRow.Resources>
                         <system:Int32 x:Key="Level">75</system:Int32>
                         <system:Single x:Key="NatureBoost">1</system:Single>
@@ -140,7 +167,7 @@
                         </MultiBinding>
                     </local:DataRow.Stat>
                 </local:DataRow>
-                <local:DataRow Title="Level 75+">
+                <local:DataRow Title="Level 75+" Grid.Column="8">
                     <local:DataRow.Resources>
                         <system:Int32 x:Key="Level">75</system:Int32>
                         <system:Single x:Key="NatureBoost">1.1</system:Single>
@@ -155,7 +182,7 @@
                     </local:DataRow.Stat>
                 </local:DataRow>
 
-                <local:DataRow Title="Level 100-">
+                <local:DataRow Title="Level 100-" Grid.Column="9">
                     <local:DataRow.Resources>
                         <system:Int32 x:Key="Level">100</system:Int32>
                         <system:Single x:Key="NatureBoost">0.9</system:Single>
@@ -169,7 +196,7 @@
                         </MultiBinding>
                     </local:DataRow.Stat>
                 </local:DataRow>
-                <local:DataRow Title="Level 100">
+                <local:DataRow Title="Level 100" Grid.Column="10">
                     <local:DataRow.Resources>
                         <system:Int32 x:Key="Level">100</system:Int32>
                         <system:Single x:Key="NatureBoost">1</system:Single>
@@ -183,7 +210,7 @@
                         </MultiBinding>
                     </local:DataRow.Stat>
                 </local:DataRow>
-                <local:DataRow Title="Level 100+">
+                <local:DataRow Title="Level 100+" Grid.Column="11">
                     <local:DataRow.Resources>
                         <system:Int32 x:Key="Level">100</system:Int32>
                         <system:Single x:Key="NatureBoost">1.1</system:Single>
@@ -198,7 +225,7 @@
                     </local:DataRow.Stat>
                 </local:DataRow>
 
-                <local:DataRow Title="Level 200-">
+                <local:DataRow Title="Level 200-" Grid.Column="12">
                     <local:DataRow.Resources>
                         <system:Int32 x:Key="Level">200</system:Int32>
                         <system:Single x:Key="NatureBoost">0.9</system:Single>
@@ -212,7 +239,7 @@
                         </MultiBinding>
                     </local:DataRow.Stat>
                 </local:DataRow>
-                <local:DataRow Title="Level 200">
+                <local:DataRow Title="Level 200" Grid.Column="13">
                     <local:DataRow.Resources>
                         <system:Int32 x:Key="Level">200</system:Int32>
                         <system:Single x:Key="NatureBoost">1</system:Single>
@@ -226,7 +253,7 @@
                         </MultiBinding>
                     </local:DataRow.Stat>
                 </local:DataRow>
-                <local:DataRow Title="Level 200+">
+                <local:DataRow Title="Level 200+" Grid.Column="14">
                     <local:DataRow.Resources>
                         <system:Int32 x:Key="Level">200</system:Int32>
                         <system:Single x:Key="NatureBoost">1.1</system:Single>
@@ -241,8 +268,10 @@
                     </local:DataRow.Stat>
                 </local:DataRow>
 
-            </WrapPanel>
-        </WrapPanel>
+            </Grid>
+            
+            <TextBlock Grid.Row="2" Grid.ColumnSpan="14" FontWeight="Light" FontStyle="Italic" Text="*These stats are calculated with 0 EVs and 0 IVs"></TextBlock>
+        </Grid>
 
     </Grid>
 </local:BaseStatsDisplayer>
